# lookalike-finder

./: .gitignore  Interexy MedKitDoc.md  Interexy.json  Ourcart.json  README.md  company_page.md  company_profile.json  company_profile.py  lookalike_finder_pipeline.docx.txt  main.py  new_pipeline.py  pyproject.toml  query_profiles_generation.py  scale interexy.md  search_queries.json  similar_companies.md  sites_finder.py  storewards interexy.md  unknown.json
.qwen/: settings.json
app/: __init__.py
app/api/: __init__.py  server.py
app/core/: __init__.py  base_results.py  company_profile.py  company_tiering.py  query_profiles_generation.py  sites_finder.py
app/output/: Interexy MedKitDoc.md  company_profile.json  similar_companies_scale.md  tier_report.md
app/output/arcade/: arcade.md  arcade_profile.json  search_queries_arcade.json  similar_companies_arcade.md  tier_report_arcade.md
